--- a/src/main/res/layout/activity_main.xml
+++ b/src/main/res/layout/activity_main.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:zhaimeng="http://schemas.android.com/apk/res-auto"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -10,12 +10,9 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".MainActivity">
 
-    <com.example.zhaimeng.imooc_guaguaka.com.example.zhaimeng.imooc_guaguaka.view.GuaGuaKa
+    <com.example.zhaimeng.imooc_guaguaka.com.example.zhaimeng.imooc_guaguaka.view.GuaGuaCardView
         android:id="@+id/id_guaguaka"
         android:layout_width="300dp"
         android:layout_height="100dp"
-        android:layout_centerInParent="true"
-        zhaimeng:text="谢谢参与"
-        zhaimeng:textColor="#ff00f0"
-        zhaimeng:textSize="50sp" />
+        android:layout_centerInParent="true" />
 </RelativeLayout>
