添加是否可刮，开始刮的功能

--- a/src/main/res/values/attrs.xml
+++ b/src/main/res/values/attrs.xml
@@ -6,5 +6,8 @@
         <attr name="cardTextSize" format="dimension"/>
         <attr name="cardCoverDrawable" format="reference" />
         <attr name="cardPathWidth" format="dimension"/>
+        <attr name="cardForeGroundText" format="string"/>
+        <attr name="cardForeGroundTextColor" format="color"/>
+        <attr name="cardForeGroundTextSize" format="dimension"/>
     </declare-styleable>
 </resources>
